Fixed video modal on mobile

--- a/frontend/src/scss/modules/_landing.scss
+++ b/frontend/src/scss/modules/_landing.scss
@@ -465,6 +465,10 @@ footer {
     iframe {
       width: 80%;
       height: 80vh;
+      @include wi-mq(mobile) {
+        width: 90%;
+        height: 50vh;
+      }
     }
     &__close {
       align-self: flex-end;
@@ -476,6 +480,9 @@ footer {
       &:hover {
         transform: rotate(90deg);
         color: $pink;
+      }
+      @include wi-mq(mobile) {
+        margin-right: 5%;
       }
     }
   }
